minor spacing issue again

--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -124,7 +124,7 @@ input[type="number"] {
 input[type="submit"] {
   background: $secondary;
   padding: 12px 20px 8px 20px;
-  margin-top: 10vh;
+  margin: 10vh 0;
   border: none;
   font-family: $specialFont;
   color: $accent;
