--- a/styles/partials/_queries.scss
+++ b/styles/partials/_queries.scss
@@ -38,7 +38,6 @@
 
   input[type="submit"] {
     font-size: 4rem;
-    margin: 10vh 0;
   }
 
   .placeholderText::placeholder {
